fixed padding and scrolling on about and scrollOverflow sections

--- a/Assets/CSS/about.css
+++ b/Assets/CSS/about.css
@@ -1,8 +1,7 @@
 #about{
     display: block;
-    height:100vh;
-    min-height: 500px;
     overflow: auto;
+    min-height: 100vh;
     background-color: white;
     padding-left: 0;
     padding-right: 0;
